--- a/src-frontend/app/chat/chat.component.css
+++ b/src-frontend/app/chat/chat.component.css
@@ -6,7 +6,8 @@
   height: 100%;
   display: flex;
   flex-direction: column-reverse;
-  padding: 0 14px 50px 14px;
+  padding: 0 0 50px 14px;
+
 }
 
 .message-container {
