--- a/src-frontend/app/game/game.component.html
+++ b/src-frontend/app/game/game.component.html
@@ -5,8 +5,11 @@
     <div class="player" *ngFor="let player of game.players">
       <span class="player-name">{{ player.name }}</span>
       <div class="vp-container">
-        <div class="vp-bar" [style.width.percent]="player.victoryPoints / game.winner().victoryPoints">
-          {{ player.victoryPoints }}</div>
+        <div class="vp-bar" [style.width.%]="player.victoryPoints / game.winner().victoryPoints * 100">
+        </div>
+        <div class="bar-text">
+          {{ player.victoryPoints }} Victory Points
+        </div>
       </div>
     </div>
   </div>
