--- a/src-frontend/styles.css
+++ b/src-frontend/styles.css
@@ -7,6 +7,7 @@ html, body {
   padding: 0;
   height: 100%;
   min-width: 1200px;
+  min-height: 680px;
   color: #333;
   font-family: 'Roboto', Helvetica, Arial, sans-serif;
 }
