--- a/src-frontend/app/lobby/lobby.component.css
+++ b/src-frontend/app/lobby/lobby.component.css
@@ -108,7 +108,7 @@
   flex-grow: 1;
 }
 
-.players {
+.game .players {
   width: 60px;
 }
 
@@ -174,6 +174,8 @@
 }
 #game-info .player {
   line-height: 28px;
+  display: inline;
+  padding-right: 12px;
 }
 
 #game-info .join-game {
