--- a/src-frontend/app/creation-page/creation-page.component.css
+++ b/src-frontend/app/creation-page/creation-page.component.css
@@ -53,6 +53,27 @@ form {
   display: flex;
 }
 
+a.return {
+  position: absolute;
+  color: white;
+  top: 18px;
+  right: 20px;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-weight: 100;
+}
+
+a.return .text {
+  padding-right: 8px;
+  text-transform: uppercase;
+  font-size: 0.8em;
+}
+
+a.return .text:hover {
+  text-decoration: underline;
+}
+
 .pane {
   position: relative;
   display: inline-block;
