--- a/src-frontend/app/creation-page/creation-page.component.html
+++ b/src-frontend/app/creation-page/creation-page.component.html
@@ -1,6 +1,10 @@
 <div class="creation-container">
   <div class="header-row">
     <div id="header"><h1>Create New Game</h1></div>
+    <a class='return' routerLink="/lobby">
+      <span class="text">Return to Lobby</span>
+      <i class="material-icons">&#xE879;</i>
+    </a>
   </div>
   <form method="POST">
     <div id="form-row">
