--- a/src-frontend/app/creation-page/creation-page.component.html
+++ b/src-frontend/app/creation-page/creation-page.component.html
@@ -20,11 +20,33 @@
             Target Number of Players:
           </div>
           <div class="header">
-            <select name="numPlayers" id="numPlayers">
+            <select name="numPlayers" id="numPlayers" (change)="numChange()">
               <option value="2">2</option>
               <option value="3">3</option>
               <option value="4">4</option>
             </select>
+          </div>
+        </div>
+      </div>
+      <div class="pane" id="AIs">
+        <div class="pane-content">
+          <div class="header-label">
+            Computer Opponents
+          </div>
+          <div class="AiList">
+            <div id="currentAis" *ngIf="desiredAis.length > 0">
+              <div class="AiPlayer" *ngFor="let ai of desiredAis; let i = index">
+                <select class="AiSelect">
+                  <option *ngFor="let type of AiTypes" value="{{ type }}" [attr.selected]="type == ai ? true : null">
+                    {{ type }}
+                  </option>
+                </select>
+                <div
+              </div>
+            </div>
+            <div class="clear-button-container" id="addAiButton">
+              <button class="wide-button" (click)="addAi()">Add an AI Player</button>
+            </div>
           </div>
         </div>
       </div>
@@ -61,6 +83,13 @@
                 </div>
               </td>
             </tr>
+            <tr>
+              <td colspan="2">
+                <div class="clearing-button-container">
+                  <button class="clearing" (click)="clear()">Deselect All</button>
+                </div>
+              </td>
+            </tr>
           </table>
         </div>
       </div>
@@ -69,16 +98,18 @@
       <div class="pane" id="card-select-and-submit">
         <div class="card-row">
           <div *ngFor="let i of [7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17]" class="card">
-            <img id="card{{ i }}" class="cardImg" src="../../assets/card/card{{ i }}.jpg" (mouseenter)="entered(i)" (mouseleave)="left()" (click)="clicked(i)" />
+            <img id="card{{ i }}" class="cardImg" src="../../assets/card/card{{ i }}.jpg" (mouseenter)="entered(i)"
+                 (mouseleave)="left()" (click)="clicked(i)" />
           </div>
         </div>
         <div class="card-row">
           <div *ngFor="let j of [18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28]" class="card">
-            <img id="card{{ j }}" class="cardImg" src="../../assets/card/card{{ j }}.jpg" (mouseenter)="entered(j)" (mouseleave)="left()" (click)="clicked(j)" />
+            <img id="card{{ j }}" class="cardImg" src="../../assets/card/card{{ j }}.jpg" (mouseenter)="entered(j)"
+                 (mouseleave)="left()" (click)="clicked(j)" />
           </div>
         </div>
         <div class="wide-button-container">
-          <button class="wide-button" (click)="validate()">Start The Game</button>
+          <button class="wide-button" id="submitButton" (click)="validate()">Start The Game</button>
         </div>
       </div>
       <div class="pane" id="blowUp">
