--- a/src-frontend/app/game/game.component.css
+++ b/src-frontend/app/game/game.component.css
@@ -51,7 +51,20 @@
   height: 100%;
   background: url("../../assets/bg_blur.png") center center;
   background-size: cover;
+  position: relative;
   /* ----------- HUD ------------- */ }
+  #game .timer {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    height: 8px;
+    z-index: 12;
+    background: #bed8f5; }
+    #game .timer .timer-inner {
+      height: 100%;
+      width: 30%;
+      background: #609ad2; }
   #game #board {
     flex-grow: 1;
     display: flex;
