--- a/src-frontend/app/game/game.component.html
+++ b/src-frontend/app/game/game.component.html
@@ -1,4 +1,3 @@
-<dmn-notification [(text)]="notificationText"></dmn-notification>
 
 <div id="winScreen" *ngIf="game && game.isOver">
   <h2>{{ game.winner().name }} won!</h2>
@@ -18,11 +17,17 @@
 </div>
 
 <div id="game">
+  <dmn-notification [(text)]="notificationText"></dmn-notification>
+  <div class="timer" *ngIf="game && game.isOwnTurn()">
+    <div class="timer-inner" [@timerState]="timerState">
+
+    </div>
+  </div>
   <div id="board" *ngIf="game">
     <div id="left-bar">
       <div id="stats">
         <div class="stat">
-          <span class="stat-label">{{notificationText}}Actions</span>
+          <span class="stat-label">Actions</span>
           <div class="icons">
               <i *ngFor="let i of game.actions | fill" class="actions material-icons">&#xE1AB;</i>
           </div>
