--- a/src-frontend/app/lobby/lobby.component.html
+++ b/src-frontend/app/lobby/lobby.component.html
@@ -18,7 +18,7 @@
                   (click)="select(pending)"
                   [ngClass]="{selected: pending.id === selectedGameId}">
               <div class="game-name">{{ pending.name }}</div>
-              <div class="players">{{ pending.users.length }} / {{ pending.maxusers }}</div>
+              <div class="players">{{ pending.names.length }} / {{ pending.maxusers }}</div>
               <div class="cards">
                 <div class="card" *ngFor="let card of pending.actioncardids">
                   <img src="../../assets/card/card{{ card }}.jpg">
@@ -53,8 +53,8 @@
               Players
             </div>
             <div class="players">
-              <div class="player" *ngFor="let player of selectedGame.users">
-                {{ player.name }}
+              <div class="player" *ngFor="let name of selectedGame.names">
+                {{ name }}
               </div>
             </div>
           </div>
