--- a/src-frontend/app/game/game.component.scss
+++ b/src-frontend/app/game/game.component.scss
@@ -339,12 +339,20 @@
 
     .hand-container {
       flex-grow: 1;
-      display: flex;
-      justify-content: center;
+      float: left;
+      white-space: nowrap;
+      overflow: auto;
       align-items: center;
+      vertical-align: middle;
+      justify-content: center;
+      overflow-y: hidden;
 
       .hand {
-        display: inline-block;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        white-space: normal !important;
 
         .card {
           padding: 0 4px;
